--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,10 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "2.4",
         "maatwebsite/excel": "^3.1",
-        "spatie/laravel-permission": "^4.0"
+        "spatie/laravel-permission": "^4.0",
+        "symfony/css-selector": "2.8",
+        "symfony/dom-crawler": "2.8",
+        "wbraganca/yii2-dynamicform": "2.0.1"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
